test: add comprehensive CourseController unit tests to improve SonarQube coverage (26 tests)